--- a/index.html
+++ b/index.html
@@ -97,26 +97,43 @@
       }
     }
 
-    /* Mobile: stack elements above image for better readability */
+    /* Mobile: text higher and wider, button restored */
     @media (max-width: 768px) {
       .inside-text,
       .descripition,
       .buttone {
-        position: static;
-        transform: none;
+        position: absolute;
+        left: 50%;
+        transform: translateX(-50%);
         text-align: center;
       }
+
       .inside-text {
+        top: 15%;           /* higher over image */
         font-size: 2rem;
-        margin-top: -60%; /* pull it over the image */
+        width: 90%;
       }
+
       .descripition {
-        font-size: 0.9rem;
-        margin-top: 10px;
+        top: 28%;           /* under main text */
+        font-size: 1rem;
+        width: 90%;
       }
+
       .buttone {
-        padding: 12px 30px;
-        margin-top: 10px;
+        top: 40%;           /* below description */
+        padding: 15px 40px; /* restore desktop padding */
+        border-radius: 25px;
+        background-color: white;
+        color: black;
+        font-weight: 600;
+        cursor: pointer;
+        transition: all 0.3s ease;
+      }
+
+      .buttone:hover {
+        transform: translateX(-50%) scale(1.05); 
+        box-shadow: 0 0 15px rgba(255, 11, 235, 0.4);
       }
     }
   </style>
