--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="overlay">
       <div class="inside-text">Your AI for Business</div>
       <div class="descripition">Make your business launch with AI by your side.</div>
-      <button class="buttone">Get started &#8599;</button>
+      <button class="buttone">Get started ↗</button>
     </div>
   </div>
 
