--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
     <div class="overlay">
       <div class="inside-text">Your AI for Business</div>
       <div class="descripition">Make your business launch with AI by your side.</div>
-      <button class="buttone">Get started ↗</button>
+      <button class="buttone">Get started 
+  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
+    <path fill="currentColor" d="M4 12v-8h8v8h-1V5H5v7H4z"/>
+  </svg>
+</button>
     </div>
   </div>
 
