--- a/index.html
+++ b/index.html
@@ -3,23 +3,20 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>C&D - your place to code freely</title>
+  <title>L&F - The place where your phone is safe</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
 </head>
 <body>
-  <h1 class="SFmaintext">Codes & Developers</h1>
+  <h1 class="SFmaintext">Lock & Find</h1>
 
   <div class="image-container">
     <img src="an AI for business.png" id="imageslayyy" alt="AI on phone and computer">
     <div class="overlay">
-      <div class="inside-text">Your place to share. Code and to vibe</div>
-      <div class="descripition">solve problems with other fellow humans.</div>
-      <button class="buttone">Get started 
-  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
-    <path fill="currentColor" d="M4 12v-8h8v8h-1V5H5v7H4z"/>
-  </svg>
+      <div class="inside-text">Safe now and forever.</div>
+      <div class="descripition">The place to make your phone safe</div>
+      <button class="buttone">Get started ↗
 </button>
     </div>
   </div>
