--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
     overflow: hidden;
     border-top: 1px solid white;
     border-bottom: 1px solid white;
+    filter: brightness(0.4);
   }
 
   /* Let the image determine the height naturally */
@@ -107,7 +108,7 @@
   /* --- Title outside --- */
   .SFmaintext {
     font-family: "Manrope", sans-serif;
-    font-weight: 600;
+    font-weight: 700;
     color: white;
     text-align: center;
     margin: 20px 0;
