--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <h1 class="SFmaintext">Lock & Find</h1>
 
   <div class="image-container">
-    <img src="an AI for business.png" id="imageslayyy" alt="AI on phone and computer">
+    <video src="an AI for business.mp3" id="imageslayyy" alt="AI on phone and computer"></video>
     <div class="overlay">
       <div class="inside-text">Safe now and forever.</div>
       <div class="descripition">The place to make your phone safe</div>
