--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-  <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -7,151 +7,129 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
+  <style>
+    /* 🔹 Fade-in animation */
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(-20px); }
+      to   { opacity: 1; transform: translateY(0); }
+    }
+
+    body {
+      background-color: black;
+      text-align: center;
+      margin: 0;
+      font-family: "Manrope", sans-serif;
+    }
+
+    .SFmaintext {
+      font-weight: 700;
+      color: white;
+      text-align: center;
+      margin: 20px 0;
+    }
+
+    /* --- Video container --- */
+    .video-container {
+      position: relative;
+      width: 80%;
+      max-width: 900px;
+      height: 500px;       /* 👈 give it height so video is visible */
+      margin: 0 auto;
+      border-radius: 50px; /* cylinder style */
+      overflow: hidden;
+      border-top: 1px solid white;
+      border-bottom: 1px solid white;
+    }
+
+    #bgvideo {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      z-index: 0;
+      filter: brightness(0.3);
+    }
+
+    .overlay {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      z-index: 1;
+      text-align: center;
+      color: white;
+      padding: 20px;
+      width: 100%;
+    }
+
+    .inside-text,
+    .descripition,
+    .buttone {
+      opacity: 0;
+      animation: fadeIn 1s ease forwards;
+    }
+
+    .inside-text { 
+      animation-delay: 0.3s; 
+      font-size: 3rem; 
+      font-weight: 600; 
+      margin-bottom: 10px; 
+    }
+
+    .descripition { 
+      animation-delay: 0.6s; 
+      font-size: 1rem; 
+      font-weight: 600; 
+      margin-bottom: 20px; 
+    }
+
+    .buttone { 
+      animation-delay: 0.9s;
+      background-color: white;
+      color: black;
+      border: none;
+      padding: 16px 60px;
+      border-radius: 35px;
+      font-weight: 600;
+      font-size: 1.1rem;
+      transition: all 0.3s ease;
+      cursor: pointer;
+    }
+
+    .buttone:hover {
+      transform: scale(1.07);
+      box-shadow: 0 0 20px rgba(255, 11, 235, 0.5);
+    }
+
+    /* --- Mobile fix --- */
+    @media (max-width: 768px) {
+      .video-container { width: 95%; height: 300px; }
+      .inside-text { font-size: 2rem; }
+      .descripition { font-size: 0.9rem; }
+      .buttone { padding: 14px 50px; font-size: 1rem; }
+    }
+  </style>
 </head>
 <body>
-<div class="video-container">
-  <!-- Background video -->
-  <video autoplay muted loop playsinline id="bgvideo">
-    <source src="video-safe.mp4" type="video/mp4">
-    Your browser does not support video playback.
-  </video>
 
+  <h1 class="SFmaintext">Lock & Find</h1>
+
+  <div class="video-container">
+    <!-- Background video -->
+    <video autoplay muted loop playsinline id="bgvideo">
+      <source src="video-safe.mp4" type="video/mp4">
+      Your browser does not support video playback.
+    </video>
+
+    <!-- Overlay text -->
     <div class="overlay">
       <div class="inside-text">Safe now and forever.</div>
       <div class="descripition">The place to make your phone safe</div>
-      <button class="buttone">Get started ↗
-</button>
+      <button class="buttone">Get started ↗</button>
     </div>
   </div>
 
 </body>
-<style>
-  /* 🔹 Fade-in animation */
-  @keyframes fadeIn {
-    from { opacity: 0; transform: translateY(-20px); }
-    to   { opacity: 1; transform: translateY(0); }
-  }
-  .video-container {
-  position: relative;
-  width: 80%;
-  max-width: 900px;
-  margin: 0 auto;
-  border-radius: 50px;   /* cylinder style */
-  overflow: hidden;
-  border-top: 1px solid white;
-  border-bottom: 1px solid white;
-}
-
-#bgvideo {
-  position: absolute;   /* video stays behind */
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;    /* fills the cylinder */
-  z-index: 0;           /* make sure it's at the back */
-  filter: brightness(0.3);
-}
-
-.overlay {
-  position: relative;
-  z-index: 1;           /* keep text above video */
-  text-align: center;
-  color: white;
-  padding: 40px;
-}
-
-  .inside-text,
-  .descripition,
-  .buttone {
-    opacity: 0;
-    animation: fadeIn 1s ease forwards;
-  }
-
-  .inside-text { animation-delay: 0.3s; }
-  .descripition { animation-delay: 0.6s; }
-  .buttone { animation-delay: 0.9s; }
-
-  /* --- Image container --- */
-  .image-container {
-    position: relative;
-    display: inline-block;
-    width: 80%;
-    max-width: 900px;
-    margin: 0 auto;
-    border-radius: 25px;
-    overflow: hidden;
-    border-top: 1px solid white;
-    border-bottom: 1px solid white;
-    
-  }
-
-  
-
-  /* --- Overlay content --- */
-  .overlay {
-    position: absolute;
-    top: 30%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
-    width: 100%;
-    padding: 20px;
-    color: white;
-  }
-
-  .inside-text {
-    font-family: "Manrope", sans-serif;
-    font-size: 3rem;
-    font-weight: 600;
-    margin-bottom: 10px;
-  }
-
-  .descripition {
-    font-family: "Manrope", sans-serif;
-    font-size: 1rem;
-    font-weight: 600;
-    margin-bottom: 20px;
-  }
-
-  .buttone {
-    background-color: white;
-    color: black;
-    font-family: "Manrope", sans-serif;
-    border: none;
-    padding: 16px 60px;
-    border-radius: 35px;
-    font-weight: 600;
-    font-size: 1.1rem;
-    transition: all 0.3s ease;
-    cursor: pointer;
-  }
-
-  .buttone:hover {
-    transform: scale(1.07);
-    box-shadow: 0 0 20px rgba(255, 11, 235, 0.5);
-  }
-
-  /* --- Title outside --- */
-  .SFmaintext {
-    font-family: "Manrope", sans-serif;
-    font-weight: 700;
-    color: white;
-    text-align: center;
-    margin: 20px 0;
-  }
-
-  body {
-    background-color: black;
-    text-align: center;
-  }
-
-  /* --- Mobile fix --- */
-  @media (max-width: 768px) {
-    .image-container { width: 95%; } /* full width */
-    .inside-text { font-size: 2rem; }
-    .descripition { font-size: 0.9rem; }
-    .buttone { padding: 14px 50px; font-size: 1rem; }
-  }
-</style>
 </html>
