--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>L&F - The place where your phone is safe</title>
+  <title>L&S - The place where your phone is safe</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
@@ -114,7 +114,7 @@
 </head>
 <body>
 
-  <h1 class="SFmaintext">Lock & Find</h1>
+  <h1 class="SFmaintext">Lock & Safe</h1>
 
   <div class="video-container">
     <!-- Background video -->
