--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
       font-size: 3rem; 
       font-weight: 600; 
       margin-bottom: 10px; 
+      color: black;
     }
 
     .descripition { 
@@ -83,6 +84,7 @@
       font-size: 1rem; 
       font-weight: 600; 
       margin-bottom: 20px; 
+      color: black;
     }
 
     .buttone { 
