--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=boy" />
+
   <style>
     /* 🔹 Fade-in animation */
     @keyframes fadeIn {
@@ -116,13 +116,6 @@
     }
 
     
-#userInter{
-  font-variation-settings:
-  'FILL' 0,
-  'wght' 400,
-  'GRAD' 0,
-  'opsz' 24
-}
 
   </style>
 </head>
@@ -130,6 +123,7 @@
   <div id="userInter">
     
   </div>
+  <img href="IMG_0264.png">
 
   <h1 class="SFmaintext">Lock & Safe</h1>
 
