--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
   <div id="userInter">
     
   </div>
-  <img href="IMG_0264.png">
+  <img src="IMG_0264.png">
 
   <h1 class="SFmaintext">Lock & Safe</h1>
 
