--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@ if(user){
 </script>
 <body>
 <!-- Tiny account icon on the right side -->
-<a href="signup.html" class="account-icon">
+<a href="singup.html" class="account-icon">
   <span class="material-symbols-outlined">account_circle</span>
   <div id="usernameDisplay" style="font-size:12px; color:white; text-align:center; margin-top:2px;"></div>
 </a>
@@ -190,7 +190,9 @@ if(user){
     <div class="overlay">
       <div class="inside-text">Safe now and forever.</div>
       <div class="descripition">The place to make your phone safe</div>
+      <a href="singup.html">
       <button class="buttone">Get started ↗</button>
+      </a>
     </div>
   </div>
 
