--- a/index.html
+++ b/index.html
@@ -134,11 +134,76 @@
   transform: scale(1.2); /* slight hover effect */
 }
 
+/* Full-screen modal */
+#loginModal {
+  display: none;
+  position: fixed;
+  top: 0; left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0,0,0,0.85); /* Dark transparent overlay */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000; /* Ensure it’s above everything */
+}
 
-.account-icon { position: fixed; top: 20px; right: 20px; text-align:center; cursor:pointer; z-index:10; }
-.account-icon .material-symbols-outlined { font-size:36px; color:white; transition: transform 0.2s; }
-.account-icon .material-symbols-outlined:hover { transform: scale(1.2); }
-#usernameDisplay { font-size:12px; color:white; margin-top:2px; }
+/* Modal box */
+.modal-content {
+  background: #111; /* Match dark theme */
+  color: white;
+  border-radius: 25px;
+  padding: 40px 30px;
+  width: 350px;
+  box-shadow: 0 10px 30px rgba(0,0,0,0.7);
+  text-align: center;
+  position: relative;
+  animation: fadeInModal 0.3s ease;
+}
+
+/* Modal inputs */
+.modal-content input {
+  width: 100%;
+  padding: 14px 15px;
+  margin: 12px 0;
+  border-radius: 12px;
+  border: 1px solid #333;
+  background: #222;
+  color: white;
+  font-size: 1rem;
+}
+
+/* Focus effect */
+.modal-content input:focus {
+  outline: none;
+  border-color: #4CAF50;
+}
+
+/* Modal button */
+.modal-content button {
+  width: 100%;
+  padding: 14px;
+  margin-top: 15px;
+  border-radius: 12px;
+  border: none;
+  background: #4CAF50;
+  color: #fff;
+  font-size: 1rem;
+  font-weight: 600;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+
+.modal-content button:hover {
+  background: #45a049;
+  transform: scale(1.03);
+}
+
+/* Fade-in animation */
+@keyframes fadeInModal {
+  from { opacity: 0; transform: translateY(-20px); }
+  to { opacity: 1; transform: translateY(0); }
+}
 
 /* Optional: style for modal inputs and button hover handled inline above */
     
@@ -176,13 +241,17 @@
     </div>
   </div>
   
+
+</div>
+
+
   <!-- Login / Signup Modal -->
-<div id="loginModal" style="display:none; justify-content:center; align-items:center; position:fixed; top:0; left:0; width:100%; height:100%; background: rgba(0,0,0,0.7);">
-  <div style="background:white; padding:30px; border-radius:15px; width:300px; text-align:center; color:black;">
+<div id="loginModal">
+  <div class="modal-content">
     <h2>Sign Up / Login</h2>
-    <input type="text" id="username" placeholder="Username" style="width:100%; padding:10px; margin:10px 0; border-radius:8px; border:1px solid #ccc;">
-    <input type="password" id="password" placeholder="Password" style="width:100%; padding:10px; margin:10px 0; border-radius:8px; border:1px solid #ccc;">
-    <button id="loginBtn" style="padding:10px 20px; border:none; border-radius:8px; background:#4CAF50; color:white; cursor:pointer;">Submit</button>
+    <input type="text" id="username" placeholder="Username">
+    <input type="password" id="password" placeholder="Password">
+    <button id="loginBtn">Submit</button>
   </div>
 </div>
 
@@ -222,12 +291,17 @@ loginBtn.addEventListener('click', () => {
     }
 });
 
-// Close modal if click outside content
+  
+// Show modal when clicking icon
+profileIcon.addEventListener('click', () => {
+    loginModal.style.display = 'flex';
+});
+
+// Close modal if click outside the box
 loginModal.addEventListener('click', (e) => {
     if(e.target === loginModal){
         loginModal.style.display = 'none';
     }
 });
-
 </script>
 </html>
