--- a/dashboard.html
+++ b/dashboard.html
@@ -7,66 +7,129 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet">
   <style>
     body {
-      background-color: black;
-      color: white;
+      margin: 0;
       font-family: "Manrope", sans-serif;
-      text-align: center;
-      padding: 50px;
+      background: black;
+      color: white;
+      display: flex;
+      flex-direction: column;
+      height: 100vh;
     }
 
-    .account-icon {
+    header {
+      display: flex;
+      justify-content: flex-end;
+      align-items: center;
+      padding: 15px 20px;
+      background: rgba(255, 255, 255, 0.08);
+      backdrop-filter: blur(10px);
+      position: relative;
+    }
+
+    .profile {
+      position: relative;
+      cursor: pointer;
       display: flex;
       align-items: center;
       gap: 8px;
-      justify-content: center;
     }
 
-    .username {
-      font-size: 1rem;
-      color: #aaa;
-    }
-
-    button {
-      margin-top: 20px;
-      padding: 10px 20px;
-      border-radius: 8px;
-      border: none;
-      background: #4CAF50;
+    .profile span {
+      font-size: 32px;
       color: white;
-      font-weight: bold;
-      cursor: pointer;
     }
 
-    button:hover {
-      background: #45a049;
+    #usernameDisplay {
+      font-weight: 600;
+      font-size: 16px;
+    }
+
+    .dropdown {
+      display: none;
+      position: absolute;
+      top: 60px;
+      right: 20px;
+      background: rgba(255, 255, 255, 0.15);
+      backdrop-filter: blur(12px);
+      border-radius: 8px;
+      padding: 10px;
+      min-width: 120px;
+    }
+
+    .dropdown button {
+      width: 100%;
+      background: transparent;
+      border: none;
+      color: white;
+      padding: 8px;
+      text-align: left;
+      cursor: pointer;
+      font-family: "Manrope", sans-serif;
+    }
+
+    .dropdown button:hover {
+      background: rgba(255, 255, 255, 0.2);
+      border-radius: 6px;
+    }
+
+    main {
+      flex: 1;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 28px;
+      text-align: center;
     }
   </style>
 </head>
 <body>
-  <h1>Welcome to Your Dashboard</h1>
+  <header>
+    <div class="profile" id="profileMenu">
+      <span class="material-symbols-outlined">account_circle</span>
+      <div id="usernameDisplay"></div>
+    </div>
+    <div class="dropdown" id="dropdownMenu">
+      <button id="logoutBtn">Logout</button>
+    </div>
+  </header>
 
-  <div class="account-icon">
-    <span class="material-symbols-outlined">account_circle</span>
-    <div id="usernameDisplay" class="username"></div>
-  </div>
-
-  <button id="logoutBtn">Logout</button>
+  <main>
+    <h1 id="welcomeText"></h1>
+  </main>
 
   <script>
-    const user = JSON.parse(localStorage.getItem('user'));
+    const user = JSON.parse(localStorage.getItem("user"));
+    const usernameDisplay = document.getElementById("usernameDisplay");
+    const welcomeText = document.getElementById("welcomeText");
+    const dropdownMenu = document.getElementById("dropdownMenu");
+    const profileMenu = document.getElementById("profileMenu");
 
-    if (user) {
-      document.getElementById('usernameDisplay').textContent = user.username;
+    if (user && user.username) {
+      usernameDisplay.textContent = user.username;
+      welcomeText.textContent = `Welcome to your dashboard, ${user.username}`;
     } else {
-      // Kick back to main page if no login
-      window.location.href = "index.html";
+      window.location.href = "index.html"; // redirect if no user
     }
 
-    document.getElementById('logoutBtn').addEventListener('click', () => {
-      localStorage.removeItem('user');
+    // Toggle dropdown
+    profileMenu.addEventListener("click", () => {
+      dropdownMenu.style.display = dropdownMenu.style.display === "block" ? "none" : "block";
+    });
+
+    // Logout
+    document.getElementById("logoutBtn").addEventListener("click", () => {
+      localStorage.removeItem("user");
       window.location.href = "index.html";
+    });
+
+    // Close dropdown if clicked outside
+    document.addEventListener("click", (e) => {
+      if (!profileMenu.contains(e.target) && !dropdownMenu.contains(e.target)) {
+        dropdownMenu.style.display = "none";
+      }
     });
   </script>
 </body>
