--- a/dashboard.html
+++ b/dashboard.html
@@ -83,6 +83,14 @@
       font-size: 28px;
       text-align: center;
     }
+
+        #welcomeText {
+      margin: 70px 20px 0 20px; /* push below top bar */
+      font-size: 18px;
+      font-weight: 400;
+      color: #ddd;
+    }
+
   </style>
 </head>
 <body>
