--- a/dashboard.html
+++ b/dashboard.html
@@ -84,12 +84,17 @@
       text-align: center;
     }
 
-        #welcomeText {
-      margin: 70px 20px 0 20px; /* push below top bar */
-      font-size: 18px;
-      font-weight: 400;
-      color: #ddd;
-    }
+   
+    /* welcome text top-left */
+#welcomeText {
+  position: absolute;
+  top: 20px;      /* near top */
+  left: 20px;     /* some padding from left edge */
+  font-size: 18px;
+  font-weight: 400;
+  color: #ddd;
+  margin: 0;      /* remove default margin */
+}
 
   </style>
 </head>
