--- a/dashboard.html
+++ b/dashboard.html
@@ -1,105 +1,95 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>S&F - Dashboard</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet">
-  <style>
-    body {
-      margin: 0;
-      font-family: "Manrope", sans-serif;
-      background: black;
-      color: white;
-      display: flex;
-      flex-direction: column;
-      height: 100vh;
-    }
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>S&F - Dashboard</title>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet">
+<style>
+  body {
+    margin: 0;
+    font-family: "Manrope", sans-serif;
+    background: black;
+    color: white;
+  }
 
-    header {
-      display: flex;
-      justify-content: flex-end;
-      align-items: center;
-      padding: 15px 20px;
-      background: rgba(255, 255, 255, 0.08);
-      backdrop-filter: blur(10px);
-      position: relative;
-    }
+  /* top bar with flex */
+  .top-bar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 15px 20px;
+    position: relative;
+  }
 
-    .profile {
-      position: relative;
-      cursor: pointer;
-      display: flex;
-      align-items: center;
-      gap: 8px;
-    }
+  #welcomeText {
+    font-size: 18px;
+    font-weight: 400;
+    color: #ddd;
+  }
 
-    .profile span {
-      font-size: 32px;
-      color: white;
-    }
+  /* profile container */
+  .profile-container {
+    position: relative;
+  }
 
-    #usernameDisplay {
-      font-weight: 600;
-      font-size: 16px;
-    }
+  .profile {
+    display: flex;
+    align-items: center;
+    gap: 6px;
+    cursor: pointer;
+    font-size: 14px;
+  }
 
-    .dropdown {
-      display: none;
-      position: absolute;
-      top: 60px;
-      right: 20px;
-      background: rgba(255, 255, 255, 0.15);
-      backdrop-filter: blur(12px);
-      border-radius: 8px;
-      padding: 10px;
-      min-width: 120px;
-    }
+  .profile span {
+    font-size: 28px;
+    color: white;
+  }
 
-    .dropdown button {
-      width: 100%;
-      background: transparent;
-      border: none;
-      color: white;
-      padding: 8px;
-      text-align: left;
-      cursor: pointer;
-      font-family: "Manrope", sans-serif;
-    }
+  #usernameDisplay {
+    font-weight: 500;
+    font-size: 14px;
+  }
 
-    .dropdown button:hover {
-      background: rgba(255, 255, 255, 0.2);
-      border-radius: 6px;
-    }
+  .dropdown {
+    display: none;
+    position: absolute;
+    top: 40px;
+    right: 0;
+    background: rgba(255, 255, 255, 0.15);
+    backdrop-filter: blur(10px);
+    border-radius: 6px;
+    padding: 8px;
+    min-width: 110px;
+  }
 
-    main {
-      flex: 1;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      font-size: 28px;
-      text-align: center;
-    }
+  .dropdown button {
+    width: 100%;
+    background: transparent;
+    border: none;
+    color: white;
+    padding: 6px;
+    text-align: left;
+    cursor: pointer;
+    font-family: "Manrope", sans-serif;
+    font-size: 14px;
+  }
 
-   
-    /* welcome text top-left */
-#welcomeText {
-  position: absolute;
-  top: 20px;      /* near top */
-  left: 20px;     /* some padding from left edge */
-  font-size: 18px;
-  font-weight: 400;
-  color: #ddd;
-  margin: 0;      /* remove default margin */
-}
-
-  </style>
+  .dropdown button:hover {
+    background: rgba(255, 255, 255, 0.2);
+    border-radius: 4px;
+  }
+</style>
 </head>
 <body>
-  <header>
+
+<!-- Top bar -->
+<div class="top-bar">
+  <div id="welcomeText"></div>
+  <div class="profile-container">
     <div class="profile" id="profileMenu">
       <span class="material-symbols-outlined">account_circle</span>
       <div id="usernameDisplay"></div>
@@ -107,43 +97,40 @@
     <div class="dropdown" id="dropdownMenu">
       <button id="logoutBtn">Logout</button>
     </div>
-  </header>
+  </div>
+</div>
 
-  <main>
-    <h1 id="welcomeText"></h1>
-  </main>
+<script>
+  const user = JSON.parse(localStorage.getItem("user"));
+  const usernameDisplay = document.getElementById("usernameDisplay");
+  const welcomeText = document.getElementById("welcomeText");
+  const dropdownMenu = document.getElementById("dropdownMenu");
+  const profileMenu = document.getElementById("profileMenu");
 
-  <script>
-    const user = JSON.parse(localStorage.getItem("user"));
-    const usernameDisplay = document.getElementById("usernameDisplay");
-    const welcomeText = document.getElementById("welcomeText");
-    const dropdownMenu = document.getElementById("dropdownMenu");
-    const profileMenu = document.getElementById("profileMenu");
+  if (user && user.username) {
+    usernameDisplay.textContent = user.username;
+    welcomeText.textContent = `Hello, ${user.username}`;
+  } else {
+    window.location.href = "index.html"; // redirect if no user
+  }
 
-    if (user && user.username) {
-      usernameDisplay.textContent = user.username;
-      welcomeText.textContent = `Welcome to your dashboard, ${user.username}`;
-    } else {
-      window.location.href = "index.html"; // redirect if no user
+  // Toggle dropdown
+  profileMenu.addEventListener("click", () => {
+    dropdownMenu.style.display = dropdownMenu.style.display === "block" ? "none" : "block";
+  });
+
+  // Logout
+  document.getElementById("logoutBtn").addEventListener("click", () => {
+    localStorage.removeItem("user");
+    window.location.href = "index.html";
+  });
+
+  // Close dropdown if clicked outside
+  document.addEventListener("click", (e) => {
+    if (!profileMenu.contains(e.target) && !dropdownMenu.contains(e.target)) {
+      dropdownMenu.style.display = "none";
     }
-
-    // Toggle dropdown
-    profileMenu.addEventListener("click", () => {
-      dropdownMenu.style.display = dropdownMenu.style.display === "block" ? "none" : "block";
-    });
-
-    // Logout
-    document.getElementById("logoutBtn").addEventListener("click", () => {
-      localStorage.removeItem("user");
-      window.location.href = "index.html";
-    });
-
-    // Close dropdown if clicked outside
-    document.addEventListener("click", (e) => {
-      if (!profileMenu.contains(e.target) && !dropdownMenu.contains(e.target)) {
-        dropdownMenu.style.display = "none";
-      }
-    });
-  </script>
+  });
+</script>
 </body>
 </html>
