--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
   </div>
 </div>
 
-  <h1 class="SFmaintext">Lock & Safe</h1>
+  <h1 class="SFmaintext">Codespacee</h1>
 
   <div class="video-container">
     <!-- Background video -->
@@ -267,8 +267,8 @@
 
     <!-- Overlay text -->
     <div class="overlay">
-      <div class="inside-text">Safe now and forever.</div>
-      <div class="descripition">The place to make your phone safe</div>
+      <div class="inside-text">The place to code.</div>
+      <div class="descripition">Let the imagination flow.</div>
      
       <button class="buttone" id="getStartedBtn">Get started ↗</button>
       
