--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
   </div>
 </div>
 
-  <h1 class="SFmaintext">Codespacee</h1>
+  <h1 class="SFmaintext">CodeCircle</h1>
 
   <div class="video-container">
     <!-- Background video -->
