--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CC - The place where your phone is safe</title>
+  <title>CC - The place where your code is beginning</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
@@ -42,7 +42,7 @@
       width: 80%;
       max-width: 900px;
       height: 500px;
-      margin: 40px auto 0 auto; /* 👈 push video down, below text */
+      margin: 20px auto 0 auto; /* 👈 push video down, below text */
       border-radius: 50px;
       overflow: hidden;
       border-top: 1px solid white;
