--- a/index.html
+++ b/index.html
@@ -23,30 +23,32 @@
     }
 
     .SFmaintext {
-      font-weight: 700;
-      color: white;
-      text-align: center;
-      position: fixed;
-      top: 15px;
-      left: 50%;
-      transform: translateX(-50%);
-      z-index: 10; /* Always on top */
-      margin: 0;
-      
-      padding: 10px 20px;
+          font-weight: 700;
+    color: white;
+    text-align: center;
+    position: fixed;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 10;
+    margin: 0;
+    padding: 20px 0; /* 👈 used to calculate space */
+    
+    width: 100%;
+    box-sizing: border-box
     }
 
     /* --- Video container --- */
     .video-container {
-      position: relative;
-      width: 80%;
-      max-width: 900px;
-      height: 500px;
-      margin: 1px auto 0 auto; /* 👈 push video down, below text */
-      border-radius: 50px;
-      overflow: hidden;
-      border-top: 1px solid white;
-      border-bottom: 1px solid white;
+       position: relative;
+    width: 80%;
+    max-width: 900px;
+    height: 500px;
+    margin: calc(40px + 20px) auto 0 auto; /* 👈 40px title height + 20px spacing */
+    border-radius: 50px;
+    overflow: hidden;
+    border-top: 1px solid white;
+    border-bottom: 1px solid white;
     }
 
     #bgvideo {
