--- a/index.html
+++ b/index.html
@@ -169,11 +169,12 @@
 
 .block-video {
   width: 100%;
-  height: 220px;
+  aspect-ratio: 16 / 9;   /* keeps 16:9 */
   border-radius: 15px;
   object-fit: cover;
   margin-top: 20px;
 }
+
 
 /* Responsive stacking */
 @media (max-width: 900px) {
