--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
     <h1>code-friendly</h1>
     <p>A smooth and clean environment designed for you to write better code.</p>
    <video autoplay muted loop playsinline class="block-video">
-  <source src="video-safe.mp4" type="video/mp4">
+  <source src="code-friendly.MP4" type="video/mp4">
   Your browser does not support video playback.
 </video>
 
