--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
     <p>We understand the struggles, the breakthroughs, and the creativity of programming.</p>
    
       <video autoplay muted loop playsinline class="block-video">
-  <source src="video-safe.mp4" type="video/mp4">
+  <source src="howtocode.mp4" type="video/mp4">
   Your browser does not support video playback.
 </video>
 
