--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
     <h1>minimalistic</h1>
     <p>Everything you need, nothing you don’t. Focus on what matters most: your ideas.</p>
     <video autoplay muted loop playsinline class="block-video">
-  <source src="video-safe.mp4" type="video/mp4">
+  <source src="minimalistic.mp4" type="video/mp4">
   Your browser does not support video playback.
 </video>
 
